# whisper-typer

./: .gitignore  README.md  pyproject.toml  run_voice_typing.py  setup.sh
whisper_voice_typing/: __init__.py  __main__.py  app.py  audio.py  config.py  server.py  utils.py
